--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
        </div>
        
-        <video src="video/inneh.mp4" controls></video>
+        <video src="video/Inneh.mp4" controls></video>
         
        <a href="./testimonials.html" class="tm">Click Here To See Mind Blowing Testimonials</a>
       </div>
