--- a/testimonials.html
+++ b/testimonials.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="./css/testimonials.css">
-  <link rel="stylesheet" href="./css/lightbox.css">
+  <link rel="stylesheet" type="text/css" href="css/testimonials.css">
+  <link rel="stylesheet" href="css/lightbox.css">
   <title>Testimonials</title>
 </head>
 <body>
@@ -95,6 +95,6 @@
 
 
   </div>
-  <script src="./Js/lightbox-plus-jquery.js"></script>
+  <script src="js/lightbox-plus-jquery.js"></script>
 </body>
 </html>
