--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<!--about section design-->
 	<section class="about" id="about">
 		<div class="about-img">
-			<img src="./images/innehjoseph01.jpg" alt="">
+			<img src="/images/innehjoseph01.jpg" alt="">
 		</div>
 
 		<div class="about-text">
