--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Inneh Joseph</title>
 	<!--custom css link-->
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
-	<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
 	 <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -65,7 +65,7 @@
 	<!--about section design-->
 	<section class="about" id="about">
 		<div class="about-img">
-			<img src="/images/innehjoseph01.jpg" alt="">
+			<img src="./images/innehjoseph01.jpg" alt="">
 		</div>
 
 		<div class="about-text">
